compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/UnitAsTypeAliasActualization.descriptors.java
public final class Usage /* mypack.Usage*/ {
  @org.jetbrains.annotations.NotNull()
  private final kotlin.Unit prop;

  @org.jetbrains.annotations.NotNull()
  public final kotlin.Unit getProp();//  getProp()

  @org.jetbrains.annotations.Nullable()
  public final kotlin.Unit getNullableProperty();//  getNullableProperty()

  public  Usage();//  .ctor()

  public final void foo();//  foo()

  public final void usage(@org.jetbrains.annotations.NotNull() kotlin.Unit);//  usage(kotlin.Unit)
}
